name:                quests
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nuew/quests#readme
license:             AGPL-3
license-file:        LICENSE
author:              Emma Welker
maintainer:          code@nuew.net
copyright:           2020 Emma Welker
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
  default-language:    Haskell2010

executable quests-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , dotenv
                     , network
                     , quests
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite quests-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quests
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nuew/quests
