name:                quests
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nuew/quests#readme
license:             AGPL-3
license-file:        LICENSE
author:              Emma Welker
maintainer:          code@nuew.net
copyright:           2020 Emma Welker
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Quests
  other-modules:       Network.Quests.API
                     , Network.Quests.API.Bans
                     , Network.Quests.API.Bookshelves
                     , Network.Quests.API.Chats
                     , Network.Quests.API.Common
                     , Network.Quests.API.JSON
                     , Network.Quests.API.Polls
                     , Network.Quests.API.Quests
                     , Network.Quests.API.Reports
                     , Network.Quests.API.Tags
                     , Network.Quests.API.Users
                     , Network.Quests.Docs
                     , Network.Quests.GlobalContext
                     , Network.Quests.Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , case-insensitive
                     , cryptonite
                     , http-media
                     , lens
                     , network-uri
                     , resource-pool
                     , servant
                     , servant-auth-server
                     , servant-docs
                     , servant-server
                     , text
                     , time
                     , unordered-containers
  default-language:    Haskell2010

executable quests-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  autogen-modules:     Paths_quests
  other-modules:       Paths_quests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , load-env
                     , network
                     , quests
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite quests-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quests
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nuew/quests
