[package]
name = "quests"
version = "0.0.0"
authors = ["Emma Welker <code@nuew.net>"]
edition = "2021"
description = "The library implementation of an interactive online roleplaying software service"
repository = "https://github.com/nuew/quests"
license = "AGPL-3.0-or-later"

publish = false # not for crates.io

[features]
serde = ["dep:serde", "url/serde"]

[dependencies]
async-trait = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1"
url = "2"

[dev-dependencies]
smol = "1"
